# OS_colloc

./: README.md  TESTS.md  fibonacci.cpp  fibonacci.h  fibonacci_test.cpp
fibonacci/: CMakeLists.txt  main.cpp
linked/: CMakeLists.txt  linked_list.cpp  linked_list.h  linked_list_test.cpp  main.cpp
palindr/: CMakeLists.txt  main.cpp  palindrome.cpp  palindrome.h  palindrome_test.cpp
